Quotes to curly quotes

--- a/manual.po
+++ b/manual.po
@@ -2163,8 +2163,8 @@ msgstr ""
 "التأكد أن الترجمة تستعمل المصطلح الصحيح في لغتك للدلالة على المفهوم المقصود، "
 "فإذا لم تكن للمصطلح ترجمة واحدة تحمل كل معانيه فعليك وضع ترجمة مختلفة لكل "
 "معنى واستعمال الترجمة الصحيحة حسب السياق. بعض الكلمات الإنگليزية يمكن أن "
-"تكون اسما أو فعلا، مثل كلمة “list” قد تكون اسما بمعنى \"قائمة\" أو فعلا "
-"\"اسرد\"، وعليك الانتباه إلى المعنى المقصود."
+"تكون اسما أو فعلا، مثل كلمة “list” قد تكون اسما بمعنى “قائمة” أو فعلا "
+"“اسرد”، وعليك الانتباه إلى المعنى المقصود."
 
 msgid ""
 "Always ensure that you really understand the source concept correctly. Use "
@@ -2530,7 +2530,7 @@ msgid ""
 "the page provides an archive with all the latest translations."
 msgstr ""
 "يمكن الوصول إلى ترجمات گنوم بسهولة عبر موقع <a0>http://l10n.gnome.org</a0> "
-"والمعروف باسم \"الأكاذيب اللعينة\". ابحث عن لغتك ثم أختر أيا من أطقم "
+"والمعروف باسم “الأكاذيب اللعينة”. ابحث عن لغتك ثم أختر أيا من أطقم "
 "الإصدارات من القائمة، يوجد رابط في أسفل الصفحة لتنزيل أحدث نسخة من كل "
 "الترجمات."
 
@@ -3589,8 +3589,8 @@ msgid ""
 "notice that most of the menu entries also have accelerator keys, to access "
 "<f19><f20>O</f20></f19>pen simply type <f21>o</f21> after typing Alt+F."
 msgstr ""
-"<f2>المُسرِّع</f2> (\"accelerator\" ويسمى أحيانا \"hot key\" أو \"access key\" "
-"أو \"mnemonic\") هو زر في لوحة المفاتيح تضغط عليه لتفعيل قائمة أو إصدار أمر "
+"<f2>المُسرِّع</f2> (“accelerator” ويسمى أحيانا “hot key” أو “access key” "
+"أو “mnemonic”) هو زر في لوحة المفاتيح تضغط عليه لتفعيل قائمة أو إصدار أمر "
 "ما بسرعة. إذا نظرت إلى شريط القوائم في أي تطبيق فستجد خطًا تحت بعض الحروف في "
 "عناوين القوائم. لاحظ الخط تحت الحرف الأول في كلٍ من <f13><f14>F</f14></"
 "f13>ile و <f15><f16>E</f16></f15>dit و <f17><f18>V</f18></f17>iew. لفتح "
@@ -3691,7 +3691,7 @@ msgid ""
 msgstr ""
 "ماذا لو أردنا إيراد الرمز & دون أن يكون علامة على مسرع؟ في هذه الحالة سيُكتب "
 "بطريقة خاصة؛ && (في كدي) أو ‪&amp;‬ (في موزيلا): “Mail && News” أو “Mail &amp; "
-"News”. يُمكن بالطبع عند الترجمة تجاهل & ووضع الكلمة المقابلة في لغتك، \"وَ\" "
+"News”. يُمكن بالطبع عند الترجمة تجاهل & ووضع الكلمة المقابلة في لغتك، “وَ” "
 "مثلا."
 
 msgid "Selecting"
@@ -4434,7 +4434,7 @@ msgid ""
 "same rows in the file so that you can see the context that you are "
 "translating in."
 msgstr ""
-"إن فعَّلتَ طور \"النَّواقِص\" فإن فرتال سيستعرض لك الوحدات التي لم تُترجَم أو لم "
+"إن فعَّلتَ طور “النَّواقِص” فإن فرتال سيستعرض لك الوحدات التي لم تُترجَم أو لم "
 "تُراجع، وهذا يُسرِّعُ لك إيجاد المواضع التي ينبغي العمل عليها. ستظهر الترجمات في "
 "ترتيبها كما هو بين جاراتها في الملف لتطّلعَ على السياق الذي تترجم فيه."
 
@@ -4671,7 +4671,7 @@ msgstr ""
 "لكن عادة ما تكون الأمور أكثر تعقيدا، مع أن بعض المشروعات تعمل بهذه الصيرورة، "
 "خاصة عندما تكون المرة الأولى التي تُتَرجم فيها البرمجية إلى لغتك. يمكنك تبسيط "
 "الأمور على نفسك بتفادي المشروعات المعقدة في البداية. في فصل دراسات الحالة "
-"(صفحة <bf0>57</bf0>) ستجد وصفا لمشروع \"رسم تُكس\" وهو مشروع بسيط للغاية يصلح "
+"(صفحة <bf0>57</bf0>) ستجد وصفا لمشروع “رسم تُكس” وهو مشروع بسيط للغاية يصلح "
 "للبدء به."
 
 msgid ""
@@ -5281,7 +5281,7 @@ msgstr ""
 msgid ""
 "For more reading, see Free/Open Source Software Licensing by Shun-ling Chen."
 msgstr ""
-"لمزيد من المطالعة طالع \"ترخيص البرمجيات الحرة\\مفتوحة المصدر\" من تأليف "
+"لمزيد من المطالعة طالع “ترخيص البرمجيات الحرة\\مفتوحة المصدر” من تأليف "
 "Shun-ling Chen."
 
 msgid ""
@@ -5526,7 +5526,7 @@ msgid ""
 "Although this might be a bit limiting in some cases, it is a simple way to "
 "incorporate manual review into your localisation process."
 msgstr ""
-"عندما تعمل على ملفات PO فمن السهل وضع علامة \"مبهم\" على الترجمات التي ترى "
+"عندما تعمل على ملفات PO فمن السهل وضع علامة “مبهم” على الترجمات التي ترى "
 "أنها تحتاج للمراجعة، ويستطيع المراجع إزالة العلامة بعد مراجعته للترجمة. قد "
 "يكون هذا معيقا أحيانا إلا أنها أبسط طريقة لإدخال المراجعة اليدوية في صيرورة "
 "الترجمة."
@@ -5639,7 +5639,7 @@ msgstr ""
 "بالتبادل مع كل ضغطة، و هذا في العادة ليس مشكلة حرجة، لكن يُفضّل فضَّ هذا التداخل "
 "إن أمكن. قد يلزم التخطيط بعناية لأي المسرعات تُعيِّن، لكن تذكر أن تُبدي أولوية "
 "للوظائف الحيوية خاصة تلك الموجودة في نافذة البرمجية الرئيسية. كذلك حافظ على "
-"اتِّساق مسرعات العناصر الشائعة (مثل \"ملف\" و \"مساعدة\") بين التطبيقات "
+"اتِّساق مسرعات العناصر الشائعة (مثل “ملف” و “مساعدة”) بين التطبيقات "
 "المختلفة."
 
 msgid ""
@@ -5761,7 +5761,7 @@ msgstr ""
 "بعض المشروعات تُبيِّن ملخصا بتقدم كل لغة. انظر هل يَعُدُّون الكلمات أم المقاطع. "
 "أغلب أدوات الترجمة يمكن أن تعطيك ملخصات كهذه أيضا، ينحو بُوتِل وفِرتال إلى ذكر "
 "عدد الكلمات لا عدد الرسائل، كما يمكن عدّ كلمات أي عدد من الملفات تريد من سطر "
-"الأوامر بيسر باستخدام أداة \"pocount\" من عُدّة الترجمة (انظر صفحة <bf4>12</"
+"الأوامر بيسر باستخدام أداة “pocount” من عُدّة الترجمة (انظر صفحة <bf4>12</"
 "bf4>). "
 
 msgid ""
@@ -5892,7 +5892,7 @@ msgstr ""
 "من الوسائل السهلة لتقليل عدد الكلمات أن تترجم ملفات محددة إذا كان المشروع "
 "يتألف من ملفات كثيرة، فإذا أمكن تحديد الملفات الأهم بسهولة فسيساعدك هذا في "
 "خطواتك الأولى. أما إن كان المشروع من ملف واحد أو كانت الأجزاء المهمة موزعة "
-"على كل الملفات فيمكن استخلاص الأجزاء المهمة. أداة \"pogrep\" من عُدّة الأدوات "
+"على كل الملفات فيمكن استخلاص الأجزاء المهمة. أداة “pogrep” من عُدّة الأدوات "
 "يمكن أن تكون عونا كبيرا لك في هذه المسألة (انظر صفحة <bf3>12</bf3>). يمكنك "
 "مثلا استخلاص المقاطع القصيرة و حدها، أو تلك التي لا تأتي من ملفات برمجية "
 "يحتوي اسمها على كلمة “admin” (وظائف الإدارة). طالع المزيد من المعلومات عن "
@@ -6111,7 +6111,7 @@ msgstr ""
 "إذ سنستعمل بعضا من المعايير المذكورة هناك لتقييم هذه المشروعات."
 
 msgid "Tux Paint is a drawing program for kids."
-msgstr "\"رسم تُكس\" برمجية رسم للأطفال."
+msgstr "“رسم تُكس” برمجية رسم للأطفال."
 
 msgid "A translation of the application only is about 1500 words."
 msgstr "ترجمته حوالي 1500 كلمة فقط."
@@ -6171,7 +6171,7 @@ msgid ""
 "project for someone who is new to localisation. It is fun, and the work pays "
 "off quite easily."
 msgstr ""
-"من هذه القائمة يظهر جليا أن \"رسم تُكس\" مرشح جذاب للترجمة، والنص ليس تقنيا "
+"من هذه القائمة يظهر جليا أن “رسم تُكس” مرشح جذاب للترجمة، والنص ليس تقنيا "
 "للغاية وإن كان عليك التفكير في أسماء الألوان والأشكال، وهو مشروع مثالي لشخص "
 "حديث عهد بالتوطين؛ فالعمل عليه ممتع ويظهر أثره بسهوله."
 
@@ -6228,7 +6228,7 @@ msgid ""
 "to ask someone else to help you with that."
 msgstr ""
 "تُودع ترجمات جتك+ في مشروع گنوم بسهولة ويوجد أكثر من أسلوب مقبول لإيداع "
-"الترجمات. تُودع ترجمات xdg-user-dirs إلى \"مشروع الترجمة\" وهذا أصعب قليلا، "
+"الترجمات. تُودع ترجمات xdg-user-dirs إلى “مشروع الترجمة” وهذا أصعب قليلا، "
 "لكن قد تجد من يساعدك في هذا الأمر."
 
 msgid "No special considerations should be necessary for your language."
