--- a/manual.po
+++ b/manual.po
@@ -4771,7 +4771,7 @@ msgstr ""
 "الملفات ثم إيداعها بعد تمام العمل عليها. تلزمك صلاحيات معينة لتستطيع إيداع "
 "الملفات في أنظمة إدارة الإصدارات وقد يكون لكل مشروع نظام مختلف لمنح هذه "
 "الصلاحيات. في الغالب لست مضطرا إلى فهم أنظمة إدارة الإصدارات لتوطين "
-"البرمجبات، لكن في بعض الحالات يكون أفضل لك أن تعرف أساسيات عملها. يمكنك "
+"البرمجيات، لكن في بعض الحالات يكون أفضل لك أن تعرف أساسيات عملها. يمكنك "
 "الاستعانة بالمطورين لإرشادك؛ و إحالتك إلى أية وثائق تعنيك مطالعتها. يشرح قسم "
 "“نظم إدارة الإصدارات” صفحة <bf6>48</bf6> بعض أساسياتها."
 
@@ -5591,7 +5591,7 @@ msgstr ""
 "من الأمور التي ينبغي الالتفات إليها مراجعة اتساق الأسلوب و توحيد المصطلحات، "
 "وانسياب العبارات في السياق الذي ترد فيه على الشاشة، وكون نصوص الشرح في "
 "الواجهة التي تشير إلى بعض تحكّمات البرمجية تستعمل نفس العناوين المكتوبة على "
-"تلك التحكّمات. لا تنس أن البرمجبات كثيرا ما تتضمن ترجمات من ملفات عدة قد يكون "
+"تلك التحكّمات. لا تنس أن البرمجيات كثيرا ما تتضمن ترجمات من ملفات عدة قد يكون "
 "عمل عليها أشخاص عديدون لذا في الاتساق مسألة مركبة."
 
 msgid ""
@@ -5655,7 +5655,7 @@ msgstr ""
 "واجهة البرمجية. مراجعة متن المحتوى لا تختلف عن مراجعة أي وثيقة مترجمة."
 
 msgid "Testing a program using Gettext"
-msgstr "اختبار البرمجبات التي تستخدم جتتكست"
+msgstr "اختبار البرمجيات التي تستخدم جتتكست"
 
 msgid ""
 "Many FOSS projects make use of software called Gettext to support many "
@@ -6195,7 +6195,7 @@ msgstr ""
 "للبرمجيات بنية تحتية شائعة: مربعات حِوار لفتح الملفات، وخيارات الطباعة، "
 "والأهم - فيما يخص هذا القسم من الكتاب - بعض المقاطع الشائعة مثل “OK” و "
 "“Cancel” و “Preferences” و “Copy” و “Paste” إلخ. ولأن كثيرا من البرمجيات "
-"تستعمل هذه المقاطع من جتك+ فترجمتها تفيد كل هذه البرمجبات. و مع أن ترجمة جتك"
+"تستعمل هذه المقاطع من جتك+ فترجمتها تفيد كل هذه البرمجيات. و مع أن ترجمة جتك"
 "+ كبيرة نوعا ما إلا أنه من السهل التعرف على المقاطع المهمة بمجرد النظر، أو "
 "بالبحث عن العناصر المؤشر عليها أنها “stock items”."
 
