--- a/tex/manual-ar.tex
+++ b/tex/manual-ar.tex
@@ -2334,7 +2334,7 @@ http://translate.sourceforge.net/wiki/toolkit/index
 من الأمور التي ينبغي الالتفات إليها مراجعة اتساق الأسلوب و توحيد
 المصطلحات، وانسياب العبارات في السياق الذي ترد فيه على الشاشة، وكون
 نصوص الشرح في الواجهة التي تشير إلى بعض تحكّمات البرمجية تستعمل نفس
-العناوين المكتوبة على تلك التحكّمات. لا تنس أن البرمجبات كثيرا ما تتضمن
+العناوين المكتوبة على تلك التحكّمات. لا تنس أن البرمجيات كثيرا ما تتضمن
 ترجمات من ملفات عدة قد يكون عمل عليها أشخاص عديدون لذا في الاتساق مسألة
 مركبة.
 
@@ -2365,7 +2365,7 @@ http://translate.sourceforge.net/wiki/toolkit/index
 المصطلحات ذاتها التي في واجهة البرمجية. مراجعة متن المحتوى لا تختلف عن
 مراجعة أي وثيقة مترجمة.
 
-\subsection{اختبار البرمجبات التي تستخدم جتتكست}
+\subsection{اختبار البرمجيات التي تستخدم جتتكست}
 تستخدم كثير من مشروعات البرمجيات الحرة حزمة برمجية تسمى جتتكست (Gettext)
 لتطبيق دعم تعدد اللغات في المشروع. في مثل هذه المشروعات تترجم ملف PO
 ويُوَلَّد منه ملف MO للاختبار، بعض أدوات الترجمة تحدث هذا بيسر، وإلا
