Simplify image names

--- a/tex/manual-ar.tex
+++ b/tex/manual-ar.tex
@@ -67,7 +67,7 @@ http://creativecommons.org/licenses/by-nc-sa/3.0
 
 
 
-\externalfigure[manualar-img001.png][width=15.108cm,height=9.551cm]
+\externalfigure[img001.png][width=15.108cm,height=9.551cm]
 مع أن الترجمة هي الجزء الأهم في عملية التوطين إلا أن تغييرات أخرى يجب
 أخذها في الحسبان لتطويع برمجية لمجموعة من المستخدمين. فقد تكون حاجة
 لاستبدال بعض الصور أو إشارات العملة المحلية أو تنسيق الأرقام والتاريخ
@@ -939,7 +939,7 @@ http://www.wikipedia.org
 
 
 
-\externalfigure[manualar-img002.png][width=15.485cm,height=8.289cm]
+\externalfigure[img002.png][width=15.485cm,height=8.289cm]
 يسمى حفظ الترجمات السابقة وإعادة استخدامها {\it ذاكرة ترجمة}. يختلف هذا
 عن مسرد المصطلحات في أن ذاكرة الترجمة تتعامل مع جمل كاملة، كما أنها
 تعرض اقتراحات على المترجم حتى لو لم تتطابق النصوص المصدر. فحتى لو كانت
@@ -1718,7 +1718,7 @@ http://opengroup.org/onlinepubs/007908799/xsh/fprintf.html
 فرتال على حاسوبك إن كنت تفضل هذا.
 
 \section{فِرتال}
-\externalfigure[manualar-img003.png][width=7.62cm,height=6.209cm]
+\externalfigure[img003.png][width=7.62cm,height=6.209cm]
 فرتال أداة ترجمة قوية وبسيطة في آن. يمكنك بها زيادة إنتاجيتك بمعرفة
 اختصارات وحِيَل أخرى دون أن تشتتك واجهة متخمة بالوظائف.
 
@@ -1801,7 +1801,7 @@ http://opengroup.org/onlinepubs/007908799/xsh/fprintf.html
 \subsubsection[ref:36543315]{استعمال اقتراحات ذاكرة الترجمة أو الترجمة الآلية}
 
 
-\externalfigure[manualar-img004.png][width=15.485cm,height=8.289cm]
+\externalfigure[img004.png][width=15.485cm,height=8.289cm]
 إن كانت لدى فرتال اقتراحات من ذاكرة الترجمة أو الترجمة الآلية فسيعرضها
 تحت منطقة التحرير، و عندها يمكنك وضع المُقتَرَحِ الأول في حقل الترجمة
 بضغط <Ctrl+1> أو الثاني بضغط <Ctrl+2> وهكذا، أو بالنقر المزدوج بالفأرة
@@ -1937,7 +1937,7 @@ http://translate.sourceforge.net/wiki/pootle/checks
 
   
 
-\externalfigure[manualar-img005.png][width=17cm,height=9.947cm]
+\externalfigure[img005.png][width=17cm,height=9.947cm]
 \startitemize[1]
 \item يُوَلّد من الكود المصدري (ملفات البرمجة) قالب ترجمة يحوي كل النصوص
 التي ستُترجَم.
