--- a/manual.po
+++ b/manual.po
@@ -5350,7 +5350,7 @@ msgstr ""
 "ليست مهمة سهلة وهذا أحد الجوانب التي تستطيع مساعدة المشروع بها للتأكد من أن "
 "التصميمات تناسب لغتك وثقافتك. قد تكون مجرد أمور بسيطة مثل طلب مساحة أكبر "
 "لمقطع طويل في الترجمة، وقد تكون أمورا أعمق في التصميم مثل إضافة خصائص "
-"تحتاجها لغتك لم ينتبه لها المطورون.</f0>"
+"تحتاجها لغتك لم ينتبه لها المطورون."
 
 msgid ""
 "Marketing the software<f0> all over the world sounds like a lot of work for "
@@ -5365,7 +5365,7 @@ msgstr ""
 "المتطوعين إلا إذا كان مساهمو المشروع من بلدان كثيرة. يمكنك أن نكون سفيرا "
 "للمشروع في بلدك أو في إقليمك وقد تكون الترجمة جزءا من هذا أيضا؛ مثل ترجمة "
 "المواد التسويقية ومواقع الوِب والمطويات الترويجية وغيرها، وقد يعتمد المشروع "
-"عليك للنجاح في المنطقة التي تعيش فيها.</f0>"
+"عليك للنجاح في المنطقة التي تعيش فيها."
 
 msgid ""
 "Involvement in events<f0> is not a frequent activity for many contributors "
