no indenting for now

--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -119,7 +119,7 @@
 %
 % spacing
 %
-\setupindenting[yes,medium]
+%\setupindenting[yes,medium]
 %\setupheads[indentnext=yes] % indent after heads
 
 \setupinterlinespace[1.2em]  % inter-line
