--- a/tex/manual-ar.tex
+++ b/tex/manual-ar.tex
@@ -514,7 +514,7 @@ http://translate.sourceforge.net/wiki/guide/locales/glibc
 المربوطة و الهاء في أواخر الكلمات، و كذلك التمييز ما بين الألف المقصورة
 و ياءُ آخرِ الكلمة. كما تشيع إقليميا أخطاء مرجعها اللهجات المحلية، مثل
 الخلط ما بين الذال و الزّاي، و الظاء و الضاد، و غيرها. تلك الأخطاء
-كلّها قد تُغيّر المعنى (لأنها كلمات أخرى) أو على اﻷقل تُصعِّب الفهم،
+كلّها قد تُغيّر المعنى (لأنها كلمات أخرى) أو على الأقل تُصعِّب الفهم،
 كما تُقلل مقروئية النصّ كثيرا، يزيد من هذا إيجاز نصوص البرمجيات. فَراعِ
 قواعد الكتابة و تحقّق مما تشكُّ في درايتك به. كذلك استعمل علامات الشّكل
 (الحركات) كلّما وَجَدتَ هذا يُقلل اللبس أو يُسهّل القراءة، فهي جزء
@@ -2033,7 +2033,7 @@ http://po4a.alioth.debian.org
 البريدية إلى خدمات الشبكات الاجتماعية وما شابهها.
 
 تذكر أن أغلب هذه القوائم البريدية مؤرشفة ومتاحة للعموم، وأي رسالة ترسلها
-سيظهر بها على الأغلب عنوان بريديك وسيُتاح محتواها لأي شخص يستطيع الوصول
+سيظهر بها على الأغلب عنوان بريدك وسيُتاح محتواها لأي شخص يستطيع الوصول
 إلى الوب. التزم بآداب الحوار وابتعد عن الجدال غير المبرر وضع في حسبانك
 تباين الخلفيات الثقافية لأعضاء القوائم وتفاوت مستويات تمكنهم من اللغة
 الإنگليزية. حاول أن تكون مراسلاتك واضحة بقدر ما تستطيع.
