--- a/tex/manual-ar.tex
+++ b/tex/manual-ar.tex
@@ -2211,7 +2211,7 @@ http://en.wikibooks.org/wiki/FOSS\_Licensing
 بالتوطين فقط لكنك قد تكتشف أن المشاركة في جوانب أخرى مفيدة، ليس للمشروع
 فحسب بل أيضا لعملك على التوطين.
 
-{\md مراجعة النص الإنگليزي} تفيد مستخدمي الواجهة الإنگليزية وفي الوقت
+{\bf مراجعة النص الإنگليزي} تفيد مستخدمي الواجهة الإنگليزية وفي الوقت
 ذاته تعين المترجمين في عملهم. إذا لم تكن تتقن الإنگليزية فإن قيامك
 بالتنويه عن المواضع في النص التي تصعب ترجمتها أو تستحيل يفيد في تحسين
 النص المَصدَر وهو ما يعود بالتحسين على عملك في الترجمة. فالمترجم من
@@ -2219,26 +2219,26 @@ http://en.wikibooks.org/wiki/FOSS\_Licensing
 مراجعا جيدا. تستطيع في الأغلب الإبلاغ عن الأخطاء في النص المصدر
 باستخدام مقتفي علّات المشروع.
 
-{\md اختبار البرمجيات} في واجهتها المترجمة خطوة مهمة في عملك على
+{\bf اختبار البرمجيات} في واجهتها المترجمة خطوة مهمة في عملك على
 توطينها. نتناول موضوع الاختبار لاحقا في صفحة
 \at[ref:34441726]. من الفوائد الثانوية لهذا إمكان مساهمتك في
 اختبار البرمجية ذاتها قُبيل الإصدار، كما أنك أفضل من يختبر التوافقية مع
 أي من الأمور المتعلقة بلغتك أو بلدك مثل التعامل مع النصوص المكتوبة
 بلغتك أو التوافق مع مواقع الوِب أو المحلية أو دعم الخطوط إلخ.
 
-{\md تصميم البرمجيات} لتناسب مجموعات متباينة من المستخدمين حول العالم
+{\bf تصميم البرمجيات} لتناسب مجموعات متباينة من المستخدمين حول العالم
 ليست مهمة سهلة وهذا أحد الجوانب التي تستطيع مساعدة المشروع بها للتأكد
 من أن التصميمات تناسب لغتك وثقافتك. قد تكون مجرد أمور بسيطة مثل طلب
 مساحة أكبر لمقطع طويل في الترجمة، وقد تكون أمورا أعمق في التصميم مثل
 إضافة خصائص تحتاجها لغتك لم ينتبه لها المطورون.
 
-{\md تسويق البرمجيات} عبر العالم قد يكون مجهودا كبيرا على مجموعة صغيرة
+{\bf تسويق البرمجيات} عبر العالم قد يكون مجهودا كبيرا على مجموعة صغيرة
 من المتطوعين إلا إذا كان مساهمو المشروع من بلدان كثيرة. يمكنك أن نكون
 سفيرا للمشروع في بلدك أو في إقليمك وقد تكون الترجمة جزءا من هذا أيضا؛
 مثل ترجمة المواد التسويقية ومواقع الوِب والمطويات الترويجية وغيرها، وقد
 يعتمد المشروع عليك للنجاح في المنطقة التي تعيش فيها.
 
-{\md المشاركة في الفعاليات الاجتماعية} ليست من الأنشطة المعتادة لكثيرين
+{\bf المشاركة في الفعاليات الاجتماعية} ليست من الأنشطة المعتادة لكثيرين
 من المساهمين في مشروعات البرمجيات الحرة، لكن قد تكون أمامك فرصة لتمثيل
 مشروع تعرف الكثير عنه فعالية محلية، وهذه طريقة رائعة للترويج للمشروع
 وربما دعوة مساهمين جدد لمساعدتك في التوطين.
