--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -156,8 +156,6 @@
 %
 % keyboard shortcuts
 %
-\catcode`<=\active
-\catcode`>=\active
-\def<#1>{{\tt #1}}
+\def\KBD#1{{\tt #1}}
 
 \stopenvironment
