--- a/tex/manual-ar.tex
+++ b/tex/manual-ar.tex
@@ -1701,7 +1701,7 @@ There are \%d photos on the device \%s
 \item {\bf
 بي.إتش.بي}
 
-\URL{http://php.net/manual/en/function.strftime.php}  or 
+\URL{http://php.net/manual/en/function.strftime.php}  أو 
 \URL{http://www.php.net/date}
 \item {\bf
 پيثون}
@@ -1802,7 +1802,7 @@ There are \%d photos on the device \%s
 العربية دون تدخل من المترجم.
 
 إذا كنت لا تريد هذه التغييرات التلقائية في النص فيمكن التراجع عنها بضغط
-\KBD{Ctrl}+Z.
+\KBD{Ctrl+Z}.
 
 \subsubsection[ref:32596109]{نسخ مُدْرَج إلى الترجمة}
 المُدْرَجات مقاطع خاصة من النص
