--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1,5 +1,9 @@
 \environment l10n-ar
 
+\setvariables
+  [l10n-manual]
+  [title=إحداث التغيير بتوطين المعلوماتية]
+
 \starttext
 
 \startfrontmatter
