Move credits to its own page

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -42,6 +42,8 @@
 أداة بعينها، غير أننا في هذا الدليل نقتصر على التعرض للموضوعات
 المشترَكة في توطين أغلب البرمجيات الحرة، وعلى أداتي بُوتِل وفِرتال.
 
+\page
+
 \section{إشادات}
 بعض محتويات هذا الكتاب بُنَيَت على مواد من موقع مشروع Translate:
 
