--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -138,6 +138,7 @@
 
 \setupinterlinespace[1.2em]  % inter-line
 \setupwhitespace[medium]     % inter-paragraph
+\setuptolerance		[verytolerant]
 
 %
 % layout
