Center standalone URLs

--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -164,9 +164,10 @@
 \definesymbol[1][{\tfa •}]
 
 %
-% url
+% urls
 %
-\def\URL#1{{\language[en]\tt\hyphenatedurl{#1}}}
+\def\URL#1{{\bidilre\language[en]\tt\hyphenatedurl{#1}\bidipop}}
+\def\CURL#1{\midaligned{\URL{#1}}}
 
 %
 % keyboard shortcuts
