--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -15,6 +15,8 @@
 %\setupdirections[bidi=global] % official, faster but incomplete
 \pardir  TRT
 \textdir TRT
+\primitive\pagedir TRT
+\primitive\bodydir TRT
 
 %
 % language
@@ -150,6 +152,8 @@
   [grid=no]%{yes, force}]
 %\showgrid
 
+\setupheads
+  [aligntitle=float]
 %
 % footnotes
 %
