fix broken formatting

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -229,38 +229,33 @@
 الممكن إخراج ترجمة جيدة بتفادي بعض الأخطاء المهمة، و كذلك الاستمتاع
 أثناء التعلم. وهذه بعض المبادئ التي ينبغي الانتباه لها.
 
-{\it
-{\bf ابدأ بداية متواضعة.} ليس عليك البدء بأكبر البرمجيات وأكثرها شعبية،
+{\bi ابدأ بداية متواضعة.} ليس عليك البدء بأكبر البرمجيات وأكثرها شعبية،
 اختر مهمة يمكنك أداؤها بسهولة في الوقت المتاح لك، إتمام المهمة سيُشعرك
-بالفخر ويحفزك أكثر.}
+بالفخر ويحفزك أكثر.
 
-{\it
-{\bf اقرأ التعليمات.} فغالبا ستجد بها نصائح تفيد في حالات معينة. فقد
+{\bi اقرأ التعليمات.} فغالبا ستجد بها نصائح تفيد في حالات معينة. فقد
 ينشر مشروع البرمجية التي تترجمها تعليمات للمساعدة في الأجزاء الصعبة، أو
 قد يضع المبرمج تعليقات على جمل معينة لشرح مفاهيم غير واضحة. الاستعانة
 بدليل للقواعد اللغوية يساعد في تفادي الأخطاء الشائعة ومشاكل النحو أو
-الإملاء التي قد تواجهك.}
+الإملاء التي قد تواجهك.
 
-{\it
-{\bf حافظ على الاتساق.} الاتساق أحد الأهداف المهمة في التوطين. يجب أن
+{\bi حافظ على الاتساق.} الاتساق أحد الأهداف المهمة في التوطين. يجب أن
 تتأكد من الاتساق في استعمال المصطلحات، واتساق أسلوب الترجمة، وأن تتناغم
 مع مصطلحات وأسلوب التطبيقات الأخرى في المنصة التي سيعمل عليها التطبيق
 (وِندوز أو كدي أو گنوم، إلخ.) و خذ في الحسبان الاتساق مع اللغة التي
 يستعملها الناس خارج عالم الحوسبة؛ في الجامعات والصحف والمجلات و غيرها،
 عندما يكون ذلك مفيدا. مع الوقت ستطور أسلوبك الخاص ولن تقع في أخطاء
-الآخرين، لكن لا تسعى للاختلاف لمجرد الاختلاف.}
+الآخرين، لكن لا تسعى للاختلاف لمجرد الاختلاف.
 
-{\it
-{\bf كن حريصا وجريئا.} قد تبدو هذه النصيحة متناقضة، لكن اسعَ إلى
+{\bi كن حريصا وجريئا.} قد تبدو هذه النصيحة متناقضة، لكن اسعَ إلى
 الموازنة بين هذين الهدفين المتضادين. ينبغي أن تكون حريصا في عملك وأن
 تسعى للأفضل. لا تتردد في البحث والدراسة، وتأكد أن تراجع أنت و شخص آخر
 الترجمة. أحيانا يكون من الأفضل تأجيل الترجمة حتى تصل إلى فهم أفضل. لكن
 في أحيان أخرى يكون عليك المضي قدما وصَوغُ مصطلح جديد أو تغيير عادة سيئة
 شاعت بين المترجمين. من السهل عادة إصلاح الأخطاء في البرمجيات الحرة،
-وإذا كنت ممن يتعلمون من أخطائهم فسيفيدك كثيرا عدم المبالغة في الحرص.}
+وإذا كنت ممن يتعلمون من أخطائهم فسيفيدك كثيرا عدم المبالغة في الحرص.
 
-{\it
-{\bf توقع النقد.} للأسف قد لا يقدر الجميع المجهود الذي تبذله. عندما تأخذ
+{\bi توقع النقد.} للأسف قد لا يقدر الجميع المجهود الذي تبذله. عندما تأخذ
 زمام المبادرة فإنك تُعرِّضُ نفسك للنقد، وهذا أمر متوقع وليس سيئا
 بالضرورة. فهذا يعني أن شخصا ما اهتم بما تفعله، والنقد الجيد يساعدك على
 تحسين عملك، بتنقيح المصطلحات التي تستعملها أو تقليل أخطائك. ضع في
@@ -269,14 +264,13 @@
 لغتك. يتطور المستخدمون معك، والمصطلحات التي انتقدوها في البداية ستُصبِح
 مقبولة ومعتادة إن كانت مبنية على تفكير سليم. لا تتجاهل النقد، بل تجاوب
 معه، و خذ في حسبانك أن الواجهات المترجمة قد تفاجئ الناس وتبعث على
-النقد.}
+النقد.
 
-{\it
-{\bf استمتع.} لا تتورط في عمل لا تحبه. غالبا ما يعمل على توطين البرمجيات
+{\bi استمتع.} لا تتورط في عمل لا تحبه. غالبا ما يعمل على توطين البرمجيات
 الحرة متطوعون يستمتعون بهذا. إذا لم يكن الأمر مرضيا بشكل أو بآخر فقد لا
 تستطيع الاستمرار فيه ومن ثم لن تحقق أهدافك، لذا ترجم البرمجيات التي
 تستخدمها وتستمتع بها، و أطرِ على المبرمجين. إذا أردت أن يشيد الناس
-بعملك فعليك أن تعمل بجد على نشره وتسويقه}
+بعملك فعليك أن تعمل بجد على نشره وتسويقه.
 
 \section{البيئة المحيطة}
 العمل الذي تقوم به يحدث في بيئة يتفاعل معها، وليست كل النصائح مناسبة لكل
