Simplify and use degavu mono

--- a/tex/type-adobearabic.tex
+++ b/tex/type-adobearabic.tex
@@ -1,28 +1,29 @@
 \starttypescript [serif] [adobearabic]
- \definefontsynonym[AdobeArabic-Regular]
-			[name:AdobeArabic-Regular]	[features=arabic]
- \definefontsynonym[AdobeArabic-Bold]
-			[name:AdobeArabic-Bold]		[features=arabic]
- \definefontsynonym[AdobeArabic-Italic]
-			[name:AdobeArabic-Italic]	[features=arabic]
- \definefontsynonym[AdobeArabic-Bold-Italic]
-			[name:AdobeArabic-BoldItalic]	[features=arabic]
-\stoptypescript
-
-\starttypescript [serif] [adobearabic]
  \usetypescript[serif][fallback]
  \definefontsynonym[Serif]
-			[AdobeArabic-Regular]		[features=arabic]
+                   [name:AdobeArabic-Regular]           [features=arabic]
  \definefontsynonym[SerifItalic]
-			[AdobeArabic-Italic]		[features=arabic]
+                   [name:AdobeArabic-Italic]            [features=arabic]
  \definefontsynonym[SerifBold]
-			[AdobeArabic-Bold]		[features=arabic]
+                   [name:AdobeArabic-Bold]              [features=arabic]
  \definefontsynonym[SerifBoldItalic]
-			[AdobeArabic-Bold-Italic]	[features=arabic]
+                   [name:AdobeArabic-BoldItalic]        [features=arabic]
+\stoptypescript
+
+\starttypescript [mono] [dejavu]
+ \usetypescript[mono][fallback]
+ \definefontsynonym[Mono]
+                   [name:DejaVuSansMono]                [features=arabic-mono]
+ \definefontsynonym[MonoItalic]
+                   [name:DejaVuSansMono-Oblique]        [features=arabic-mono]
+ \definefontsynonym[MonoBold]
+                   [name:DejaVuSansMono-Bold]           [features=arabic-mono]
+ \definefontsynonym[MonoBoldItalic]
+                   [name:DejaVuSansMono-BoldOblique]    [features=arabic-mono]
 \stoptypescript
 
 \starttypescript [adobearabic]
   \definetypeface [adobearabic] [rm] [serif] [adobearabic] [default] 
-  \definetypeface [adobearabic] [tt] [mono]  [default]     [default][rscale=0.7]
+  \definetypeface [adobearabic] [tt] [mono]  [dejavu]      [default][rscale=0.6]
   \definetypeface [adobearabic] [ss] [sans]  [default]     [default][rscale=0.8]
 \stoptypescript 
