--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1757,8 +1757,8 @@ bja\lettertilde fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 
 \subsection{أسلوب الترجمة المعتادة}
 بعد فتح الملف ستظهر أول وحدة ترجمة و سيكون مؤشر الكتابة في الحقل أسفل
-النص المَصدَر، فيمكن ببساطة كتابة الترجمة ثم ضغط <Enter> عند الانتهاء
-من الوحدة، مثل أي محرر نصوص. لاحظ أن <Enter> تنقلك إلى الموضع التالي
+النص المَصدَر، فيمكن ببساطة كتابة الترجمة ثم ضغط \KBD{Enter} عند الانتهاء
+من الوحدة، مثل أي محرر نصوص. لاحظ أن \KBD{Enter} تنقلك إلى الموضع التالي
 الذي ستكتب فيه، ففي حالة وحدات ترجمة الجموع ستنقلك إلى السطر التالي في
 نفس الوحدة.
 
@@ -1820,7 +1820,7 @@ bja\lettertilde fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 على الاقتراح الذي تريده.
 
 \subsection{التنقل}
-رأينا سابقا كيف ننتقل إلى النقطة التالية في الترجمة بضغط <Enter>. يمكن
+رأينا سابقا كيف ننتقل إلى النقطة التالية في الترجمة بضغط \KBD{Enter}. يمكن
 كذلك الانتقال بين الصفوف بضغط \KBD{Ctrl+Down} و \KBD{Ctrl+Up}، أو ضغط
 \KBD{Ctrl+PgDown} و \KBD{Ctrl+PgUp} للانتقال بخطوات أكبر.
 
@@ -1834,11 +1834,11 @@ bja\lettertilde fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 السياق الذي تترجم فيه.
 
 \subsubsection{طَورُ البحث}
-عند تفعيل طَورِ البحث أو لو ضغطتَ <F3> سينقلك فرتال بين الصفوف التي تحوي
+عند تفعيل طَورِ البحث أو لو ضغطتَ \KBD{F3} سينقلك فرتال بين الصفوف التي تحوي
 النص الذي تبحث عنه. ستظهر الترجمات في ترتيبها كما هو بين جاراتها في
 الملف لتطّلع على السياق الذي تترجم فيه.
 
-يمكنك الانتقال من حقل البحث إلى حقل الترجمة بضغط <Enter> أو باختيار
+يمكنك الانتقال من حقل البحث إلى حقل الترجمة بضغط \KBD{Enter} أو باختيار
 طَورٍ آخر.
 
 \section{بُوتِل}
