--- a/tex/main.tex
+++ b/tex/main.tex
@@ -2511,7 +2511,7 @@ Name}\letterbackslash share\letterbackslash locale\letterbackslash
 
 \rexample{10.509 (ألمانيا)}
 
-\example{൧൦،൫൦൯ (الهند؛ مالايلام)}
+\example{{\mal ൧൦،൫൦൯} (الهند؛ مالايلام)}
 
 \subsubsection{مثال على التاريخ}
 \rexample{15 مارس 2010 (2010-03-15)}
