--- a/tex/type-adobearabic.tex
+++ b/tex/type-adobearabic.tex
@@ -1,7 +1,10 @@
+\definefontfallback[arrows][name:xits][0x2190-0x21FF][force=yes,check=yes]
+%\definefontfallback[malayalam][name:Dyuthi][malayalam]
 \starttypescript [serif] [adobearabic]
  \usetypescript[serif][fallback]
  \definefontsynonym[Serif]
-                   [name:AdobeArabic-Regular]           [features=arabic]
+                   [name:AdobeArabic-Regular]
+                   [features=arabic,fallbacks=arrows]
  \definefontsynonym[SerifItalic]
                    [name:AdobeArabic-Italic]            [features=arabic]
  \definefontsynonym[SerifBold]
