rename bidi module

--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -10,7 +10,7 @@
 %
 % directionality
 %
-\usemodule[directions] % mine, a bit slower
+\usemodule[bidi] % mine, a bit slower
 \ctxlua{bidi.enable()}
 %\setupdirections[bidi=global] % official, faster but incomplete
 \pardir  TRT
