--- a/tex/main.tex
+++ b/tex/main.tex
@@ -45,7 +45,7 @@
 \page
 
 \section{إشادات}
-بعض محتويات هذا الكتاب بُنَيَت على مواد من موقع مشروع Translate:
+بعض محتويات هذا الكتاب بُنَيَت على مواد من موقع مشروع Translate\rlm:
 \CURL{http://translate.sourceforge.net/}
 
 نشكر صمويل مُري على مقالته التي استعنّا بها في قسم المصطلحات. المقالة
@@ -2189,7 +2189,7 @@ bja\lettertilde fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 استمرارية المشروع، وينبغي ألا يؤثر هذا على عملك.
 
 لمزيد من المطالعة طالع “ترخيص البرمجيات الحرة\letterbackslash مفتوحة
-المصدر” من تأليف Shun-ling Chen.
+المصدر” من تأليف Shun-ling Chen\rlm.
 \CURL{http://www.iosn.net/licensing/foss-licensing-primer/foss-licensing-final.pdf}
 \CURL{http://en.wikibooks.org/wiki/FOSS_Licensing}
 
